src/test/ui/parser/extern-no-fn.stderr
error: missing `fn`, `type`, `const`, or `static` for item declaration
  --> $DIR/extern-no-fn.rs:1:9
   |
LL |   extern {
   |  _________^
LL | |
LL | |     f();
   | |____^ missing `fn`, `type`, `const`, or `static`

error: aborting due to previous error

