src/test/ui/parser/extern-no-fn.rs
extern {
//~^ ERROR missing `fn`, `type`, `const`, or `static` for item declaration
    f();
}

fn main() {
}
